--- a/Client/Views/Subject/Index.cshtml
+++ b/Client/Views/Subject/Index.cshtml
@@ -25,7 +25,7 @@
             <!-- Logo -->
             <!-- ============================================================== -->
             <div class="navbar-header">
-                <a class="navbar-brand" href="student">
+                <a class="navbar-brand" href="#">
                     <!-- Logo icon --><b>
                         <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                         <!-- Dark Logo icon -->
@@ -62,15 +62,15 @@
             <!--<div class="profile-img"> <img src="~/Mini AdminPro/assets/images/users/1.jpg" alt="user" /> </div>-->
             <!-- User profile text-->
             <!--<div class="profile-text">
-                <a href="#" class="dropdown-toggle link u-dropdown" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Markarn Doe <span class="caret"></span></a>
-                <div class="dropdown-menu animated flipInY">
-                    <a href="#" class="dropdown-item"><i class="ti-user"></i> My Profile</a>
-                    <a href="#" class="dropdown-item"><i class="ti-wallet"></i> My Balance</a>
-                    <a href="#" class="dropdown-item"><i class="ti-email"></i> Inbox</a>
-                    <div class="dropdown-divider"></div> <a href="#" class="dropdown-item"><i class="ti-settings"></i> Account Setting</a>
-                    <div class="dropdown-divider"></div> <a href="login.html" class="dropdown-item"><i class="fa fa-power-off"></i> Logout</a>
-                </div>
-            </div>-->
+        <a href="#" class="dropdown-toggle link u-dropdown" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Markarn Doe <span class="caret"></span></a>
+        <div class="dropdown-menu animated flipInY">
+            <a href="#" class="dropdown-item"><i class="ti-user"></i> My Profile</a>
+            <a href="#" class="dropdown-item"><i class="ti-wallet"></i> My Balance</a>
+            <a href="#" class="dropdown-item"><i class="ti-email"></i> Inbox</a>
+            <div class="dropdown-divider"></div> <a href="#" class="dropdown-item"><i class="ti-settings"></i> Account Setting</a>
+            <div class="dropdown-divider"></div> <a href="login.html" class="dropdown-item"><i class="fa fa-power-off"></i> Logout</a>
+        </div>
+    </div>-->
             <!--</div>-->
             <!-- End User profile text-->
             <!-- Sidebar navigation-->
@@ -78,14 +78,13 @@
                 <ul id="sidebarnav">
                     <li class="nav-small-cap">MENU</li>
                     <li>
-                        <a class="has-arrow" href="#" aria-expanded="false"><i class="mdi mdi-gauge"></i><span class="hide-menu">Dashboard</span></a>
-                        <ul aria-expanded="false" class="collapse">
-                            <li><a href="index.html">Modern Dashboard</a></li>
-                            <li><a href="index2.html">Awesome Dashboard</a></li>
-                            <li><a href="index3.html">Classy Dashboard</a></li>
-                            <li><a href="index4.html">Analytical Dashboard</a></li>
-                            <li><a href="index5.html">Minimal Dashboard</a></li>
-                        </ul>
+                        <a href="/Student/index" aria-expanded="false"><i class="mdi mdi-account"></i><span class="hide-menu">Student</span></a>
+                    </li>
+                    <li>
+                        <a href="/Subject/index" aria-expanded="false"><i class="mdi mdi-book-open"></i><span class="hide-menu">Subject</span></a>
+                    </li>
+                    <li>
+                        <a href="/Lesson/index" aria-expanded="false"><i class="mdi mdi-view-module"></i><span class="hide-menu">Lesson</span></a>
                     </li>
                 </ul>
             </nav>
@@ -93,14 +92,14 @@
         </div>
         <!-- End Sidebar scroll-->
         <!-- Bottom points-->
-        <div class="sidebar-footer">
+        <!--<div class="sidebar-footer">-->
             <!-- item-->
-            <a href="" class="link" data-toggle="tooltip" title="Settings"><i class="ti-settings"></i></a>
+            <!--<a href="" class="link" data-toggle="tooltip" title="Settings"><i class="ti-settings"></i></a>-->
             <!-- item-->
-            <a href="" class="link" data-toggle="tooltip" title="Email"><i class="mdi mdi-gmail"></i></a>
+            <!--<a href="" class="link" data-toggle="tooltip" title="Email"><i class="mdi mdi-gmail"></i></a>-->
             <!-- item-->
-            <a href="" class="link" data-toggle="tooltip" title="Logout"><i class="mdi mdi-power"></i></a>
-        </div>
+            <!--<a href="" class="link" data-toggle="tooltip" title="Logout"><i class="mdi mdi-power"></i></a>
+        </div>-->
         <!-- End Bottom points-->
     </aside>
     <!-- ============================================================== -->
@@ -277,7 +276,7 @@
                     <!-- ============================================================== -->
                     <!-- footer -->
                     <!-- ============================================================== -->
-                    <footer class="footer"> © 2017 Monster Admin by wrappixel.com </footer>
+                    <footer class="footer"> @*© 2017 Monster Admin by wrappixel.com*@ </footer>
                     <!-- ============================================================== -->
                     <!-- End footer -->
                     <!-- ============================================================== -->
